syntax = "proto3";

package mpaxos;
import "classic.proto";

/// mpaxos
enum MPaxosMsgType{
    SET = 0;
    SET_RESPONSE = 1;
}

message MPaxosMsg {
    MPaxosMsgType msg_type = 1;
    int32 from = 2;
    int32 ballot = 3;
    int32 index = 4;
    classic.Txn txns = 5;
}

service MPaxos {
    rpc replication(stream MPaxosMsg) returns(classic.Reply) {}
}